--- a/about.html
+++ b/about.html
@@ -129,33 +129,49 @@
                             <h1 class="mb-2">WELCOME TO THE
                                 RAJA ROY PRAMOTORS</h1>
                         </div>
-                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to you. At our core, we're not just in the business of properties; we're in the business of making dreams come true. Whether you're buying, selling, or investing, we're here to guide you every step of the way. Explore the boundless opportunities that await you in the world of real estate.
+                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to
+                            you. At our core, we're not just in the business of properties; we're in the business of
+                            making dreams come true. Whether you're buying, selling, or investing, we're here to guide
+                            you every step of the way. Explore the boundless opportunities that await you in the world
+                            of real estate.
 
-                            At RAJA ROY PRAMOTORS, we believe that a home is not just a physical space; it is a sanctuary where dreams are woven, memories are cherished, and lives are transformed. Our mission is to help you find the perfect place to call home, whether it’s your first step into the real estate market, an upgrade to accommodate a growing family, or an investment opportunity to secure your future.
-                            
-                            As a company, we are not just focused on transactions; we believe in building meaningful and long-lasting relationships. Our success is defined by the trust and satisfaction of our clients, and we are grateful to have played a role in the realization of countless dreams</p>
-                        <div class="row g-3">
-                               <p class="mb-4">Beyond our commitment to excellence in service, we also understand the responsibility we have towards the environment and the communities we operate in. We strive to make a positive impact by embracing sustainable practices and giving back through various philanthropic initiatives.
+                            At RAJA ROY PRAMOTORS, we believe that a home is not just a physical space; it is a
+                            sanctuary where dreams are woven, memories are cherished, and lives are transformed. Our
+                            mission is to help you find the perfect place to call home, whether it’s your first step
+                            into the real estate market, an upgrade to accommodate a growing family, or an investment
+                            opportunity to secure your future.
 
-                                I invite you to explore our website, where you will find a wide range of properties tailored to your needs. Whether you’re looking for a cozy apartment, a charming suburban home, or a commercial space to grow your business, we have something to offer for everyone.
-                                
-                                Thank you for considering Raja Roy Pramotors as your trusted real estate partner. We look forward to helping you find the perfect place to call home and making your real estate journey a memorable and fulfilling one.</p>
+                            As a company, we are not just focused on transactions; we believe in building meaningful and
+                            long-lasting relationships. Our success is defined by the trust and satisfaction of our
+                            clients, and we are grateful to have played a role in the realization of countless dreams
+                        </p>
 
-                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.3s">
-                                <div class="bg-light rounded text-center p-4">
-                                    <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                                    <h2 class="mb-1" data-toggle="counter-up">1234</h2>
-                                    <p class="mb-0">Clients</p>
-                                </div>
+                        <p class="mb-4">Beyond our commitment to excellence in service, we also understand the
+                            responsibility we have towards the environment and the communities we operate in. We
+                            strive to make a positive impact by embracing sustainable practices and giving back
+                            through various philanthropic initiatives.
+
+                            I invite you to explore our website, where you will find a wide range of properties
+                            tailored to your needs. Whether you’re looking for a cozy apartment, a charming suburban
+                            home, or a commercial space to grow your business, we have something to offer for
+                            everyone.
+
+                            Thank you for considering Raja Roy Pramotors as your trusted real estate partner. We
+                            look forward to helping you find the perfect place to call home and making your real
+                            estate journey a memorable and fulfilling one.</p>
+
+
+                        <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
+                            <div
+                                class="bg-light rounded text-center  d-flex justify-content-center align-content-center gap-3">
+                                <i class="fa fa-award fa-2x text-primary mb-2"></i>
+
+                                <p class="mb-0">
+                                    Certified Company</p>
                             </div>
-                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.5s">
-                                <div class="bg-light rounded text-center p-4">
-                                    <i class="fa fa-check fa-2x text-primary mb-2"></i>
-                                    <h2 class="mb-1" data-toggle="counter-up">1234</h2>
-                                    <p class="mb-0">Projects</p>
-                                </div>
-                            </div>
+
                         </div>
+
                     </div>
                     <div class="col-lg-5">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s"
@@ -185,7 +201,12 @@
         </div>
         <div class="col-lg-6 py-3 m-4 mb-1">
             <h1>RAJA ROY PRAMOTORS,2021</h1>
-            <p>Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a desire to create a positive impact on people's lives. Our journey began with a small team of dedicated professionals who shared a common goal: to provide exceptional real estate services that go above and beyond expectations. Over the years, we have grown and expanded, gaining extensive experience and building a vast network of satisfied clients. Throughout this journey, our core values of integrity, professionalism, and personalized service have remained at the forefront of everything we do.</p>
+            <p>Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a desire to create a
+                positive impact on people's lives. Our journey began with a small team of dedicated professionals
+                who shared a common goal: to provide exceptional real estate services that go above and beyond
+                expectations. Over the years, we have grown and expanded, gaining extensive experience and building
+                a vast network of satisfied clients. Throughout this journey, our core values of integrity,
+                professionalism, and personalized service have remained at the forefront of everything we do.</p>
         </div>
         <!-- Footer Start -->
         <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -244,7 +265,8 @@
                             &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
 
 
-                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
+                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The
+                                Patterns
                                 Company</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
