--- a/about.html
+++ b/about.html
@@ -74,7 +74,6 @@
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
                 </div>
             </nav>
 
@@ -179,14 +178,19 @@
             </div>
         </div> -->
         <!-- Team End -->
+        <div class="container">
+        <div class="row">
         <div class="text-center col-lg-12 py-1 m-2">
-            <h1>Our History</h1>
-            <h2>Our Most Efficient Year</h2>
+            <h5>Our History</h5>
+            <h3>Our Most Efficient Year</h3>
         </div>
-        <div class="col-lg-6 py-3 m-4 mb-1">
+        <div class="col-lg-6 py-3  mb-1">
             <h1>RAJA ROY PRAMOTORS,2021</h1>
             <p>Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a desire to create a positive impact on people's lives. Our journey began with a small team of dedicated professionals who shared a common goal: to provide exceptional real estate services that go above and beyond expectations. Over the years, we have grown and expanded, gaining extensive experience and building a vast network of satisfied clients. Throughout this journey, our core values of integrity, professionalism, and personalized service have remained at the forefront of everything we do.</p>
         </div>
+        <div class="col-lg-6"><img src="./img/customer satisfaction.png"/></div>
+        </div>
+    </div>
         <!-- Footer Start -->
         <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
 
