--- a/about.html
+++ b/about.html
@@ -194,6 +194,7 @@
             </div>
         </div> -->
         <!-- Team End -->
+        <!-- HISTORY start -->
         <div class="container">
         <div class="row">
         <div class="text-center col-lg-12 py-1 m-2">
@@ -212,6 +213,20 @@
         <div class="col-lg-6"><img src="./img/customer satisfaction.png"/></div>
         </div>
     </div>
+    <!-- History end -->
+    <!-- Vision Start-->
+    <div class="container">
+        <div class="row">
+        <div class="text-center col-lg-12 py-1 m-2">
+            <h3>Vision</h3>
+        </div>
+        <div class="col-lg-6 py-3  mb-1">
+            <p>To be the beacon of visionary real estate development, reshaping skylines and enriching lives. We aspire to create enduring landmarks that inspire awe, foster vibrant communities, and set new standards for sustainable, inclusive, and exceptional living.</p>
+        </div>
+        <div class="col-lg-6"><img src="./img/customer satisfaction.png"/></div>
+        </div>
+    </div>
+    
         <!-- Footer Start -->
         <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
 
