--- a/gallery.html
+++ b/gallery.html
@@ -120,102 +120,125 @@
     <!-- Full Screen Search End -->
 
 
-    <!-- Domain Search Start -->
-    <div class="container-xxl domain" style="margin-top: 90px; margin-bottom: 90px;">
+
+    <div class="container-xxl gallery">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-lg-12 text-center">
+                    <h4>Our Latest Photos</h4>
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/open-plots.webp" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/investment.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <style>
+        .gallery img {
+            width: 100%;
+        }
+    </style>
+
+
+
+    <!-- Footer Start -->
+    <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+
+        <div class="container pt-1 pb-4 px-lg-5">
+            <div class="row gy-5 gx-4 pt-5">
+
+                <div class="col-lg-8 col-md-12">
+                    <div class="row gy-5 g-4">
+                        <div class="col-md-6">
+                            <h5 class="fw-bold text-white mb-4">Our links</h5>
+                            <a class="btn btn-link" href="/">Home </a>
+                            <a class="btn btn-link" href="./about.html">About </a>
+
+                            <a class="btn btn-link" href="./gallery.html">Gallery</a>
+                            <a class="btn btn-link" href="./contact.html">Contact</a>
+
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="fw-bold text-white mb-4">Our Services</h5>
+                            <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
+                            <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
+                            <a class="btn btn-link" href="./investments.html">Investments</a>
+                            <a class="btn btn-link" href="">Projects</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
+                        MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"
+                            target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/RajaRoyPramotors21"
+                            target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
+                                target="_blank"></i></a>
+
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/raja_roy_pramotors/"
+                            target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         <div class="container px-lg-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <div class="section-title position-relative text-center mx-auto mb-4 pb-4 wow fadeInUp"
-                        data-wow-delay="0.1s" style="max-width: 600px;">
-                        <h1 class="mb-3">Search Your Domain</h1>
-                        <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos
-                            ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
+
+
+                        Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
+                            Company</a>
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <div class="footer-menu">
+                            <a href="/">Home</a>
+                            <a href="">Cookies</a>
+                            <a href="">Help</a>
+                            <a href="">FQAs</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
-        <!-- Domain Search End -->
+    </div>
+
+    <!-- Footer End -->
 
 
-        <!-- Footer Start -->
-        <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-
-            <div class="container pt-1 pb-4 px-lg-5">
-                <div class="row gy-5 gx-4 pt-5">
-
-                    <div class="col-lg-8 col-md-12">
-                        <div class="row gy-5 g-4">
-                            <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">Our links</h5>
-                                <a class="btn btn-link" href="/">Home </a>
-                                <a class="btn btn-link" href="./about.html">About </a>
-
-                                <a class="btn btn-link" href="./gallery.html">Gallery</a>
-                                <a class="btn btn-link" href="./contact.html">Contact</a>
-
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">Our Services</h5>
-                                <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
-                                <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
-                                <a class="btn btn-link" href="./investments.html">Investments</a>
-                                <a class="btn btn-link" href="">Projects</a>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
-                            MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"
-                                target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
-                                    target="_blank"></i></a>
-
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="container px-lg-5">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
-
-
-                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
-                                Company</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="/">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <!-- Footer End -->
-
-
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
