--- a/index.html
+++ b/index.html
@@ -250,9 +250,47 @@
             </div>
         </div>
         <!-- About End -->
-
+        <div class="call">
+            <a href="tel:+918885667888">
+                <i class="fa fa-phone-alt"></i>
+            </a>
+        </div>
+        <div class="whatsapp">
+            <a href="tel:+918885667888">
+                <h4>Chat With Us!</h4>
+            </a>
+        </div>
         <style>
+            .call {
+                position: fixed;
+                right: 20px;
+                top: 70%;
+                background-color: #cb4154;
+                z-index: 999;
+                padding: 0.6rem;
+                border-radius: 50%;
+            }
 
+            .whatsapp {
+                position: fixed;
+                right: 0;
+                top: 20%;
+                background-color: #cb4154;
+                z-index: 999;
+                height: 100px;
+                width: 40px;
+            }
+
+            .whatsapp h4 {
+                font-size: 15px;
+                transform: rotate(270deg);
+                width: 100%;
+
+            }
+
+            .call i {
+                font-size: 2rem;
+            }
         </style>
         <!-- Pricing Start -->
         <div class="container-xxl py-5 services">
