--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
 
-                                <a href="./open-plots.html" class="dropdown-item ">OPEN PLOTS</a>
+                                <a href="./open-plots.html" class="dropdown-item ">Open Plots</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Farm-Lands</a>
                                 <a href="./investments.html" class="dropdown-item">Investment</a>
                                 <a href="./projects.html" class="dropdown-item  active">Projects</a>
@@ -178,7 +178,7 @@
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
                                 <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
                                 <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
-                                <a class="btn btn-link" href="./investments.html">Investments</a>
+                                <a class="btn btn-link" href="./investments.html">Investment</a>
                                 <a class="btn btn-link" href="">Projects</a>
 
                             </div>
