--- a/farm-lands.html
+++ b/farm-lands.html
@@ -178,19 +178,19 @@
                         <img src="./img/farmplotsimage2.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/farmplotsimage5.jpeg" alt="">
+                        <img src="./img/framplotsimage3.jpg.jpeg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/framplotsimage3.jpg.jpeg" alt="">
+                        <img src="./img/framplotsimage7.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/treehouse.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/farmplotsimage1.jpg" alt="">
+                        <img src="./img/farmplotsimage4.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/farmplotsimage4.jpg" alt="">
+                        <img src="./img/framplotimage6.jpg" alt="">
                     </div>
                     </div>
                     </div>
