--- a/investments.html
+++ b/investments.html
@@ -160,22 +160,22 @@
                         <h4>Our Latest Photos</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/openplot2.jpeg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/openplot3.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/open-plots.webp" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/openplotimage.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/openplot4.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/openplot5.jpg" alt="">
                     </div>
                     </div>
                     </div>
