--- a/investments.html
+++ b/investments.html
@@ -172,7 +172,7 @@
                         <img src="./img/openplotimage.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/openplot4.jpg" alt="">
+                        <img src="./img/open3.png" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/openplot5.jpg" alt="">
