--- a/open-plots.html
+++ b/open-plots.html
@@ -155,19 +155,19 @@
                         <h4>Our Farm Photos</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/open1.png" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/open2.png" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/open-plots.webp" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/openplotimage.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/Form-Lands.jpg" alt="">
+                        <img src="./img/open3.png" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/investment.jpg" alt="">
