--- a/farm-lands.html
+++ b/farm-lands.html
@@ -178,7 +178,7 @@
                         <img src="./img/farmplotsimage2.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/framplotsimage3.jpg.jpeg" alt="">
+                        <img src="./img/farm1.png" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/framplotsimage7.jpg" alt="">
@@ -187,7 +187,7 @@
                         <img src="./img/treehouse.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/farmplotsimage4.jpg" alt="">
+                        <img src="./img/farm2.png" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/framplotimage6.jpg" alt="">
