--- a/investments.html
+++ b/investments.html
@@ -160,7 +160,7 @@
                         <h4>Our Latest Photos</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/openplot2.jpeg" alt="">
+                        <img src="./img/INVESTMENT-PLOTS.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/openplot3.jpg" alt="">
