--- a/gallery.html
+++ b/gallery.html
@@ -127,13 +127,13 @@
                     <h4>Our Latest Photos</h4>
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/gallery1.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/gallaery2.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/open-plots.webp" alt="">
+                    <img src="./img/IMG_7874-PhotoRoom.png-PhotoRoom.png" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
                     <img src="./img/Form-Lands.jpg" alt="">
