--- a/gallery.html
+++ b/gallery.html
@@ -136,10 +136,10 @@
                     <img src="./img/IMG_7874-PhotoRoom.png-PhotoRoom.png" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/gallery6.png" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/gallery5.jpeg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
                     <img src="./img/investment.jpg" alt="">
