--- a/investments.html
+++ b/investments.html
@@ -88,7 +88,7 @@
                                     class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Services</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Investments</li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Investment</li>
                                 </ol>
                             </nav>
                         </div>
