--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                 <img src="./img/form-lands.webp" alt="">
                             </div>
                             <div class="text-center border-bottom p-4 pt-5">
-                                <h4 class="fw-bold">FORM - LANDS</h4>
+                                <h4 class="fw-bold">FARM - LANDS</h4>
                                 <p class="mb-0"> Our expertise extends to nurturing and enhancing the productivity of
                                     farming lands.
                                     We
