--- a/investments.html
+++ b/investments.html
@@ -66,7 +66,7 @@
 
 
                                 <a href="./open-plots.html" class="dropdown-item ">OPEN PLOTS</a>
-                                <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./farm-lands.html" class="dropdown-item">Farm-Lands</a>
                                 <a href="./investments.html" class="dropdown-item active">Investment</a>
                                 <a href="./projects.html" class="dropdown-item">Projects</a>
                             </div>
