--- a/open-plots.html
+++ b/open-plots.html
@@ -64,7 +64,7 @@
                             <div class="dropdown-menu m-0">
 
                                 <a href="./open-plots.html" class="dropdown-item active">OPEN PLOTS</a>
-                                <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./farm-lands.html" class="dropdown-item">Farm-Lands</a>
                                 <a href="./investments.html" class="dropdown-item">Investment</a>
                                 <a href="./projects.html" class="dropdown-item">Projects</a>
                             </div>
@@ -176,7 +176,7 @@
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
                                 <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
-                                <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
+                                <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
                                 <a class="btn btn-link" href="./investments.html">Investments</a>
                                 <a class="btn btn-link" href="">Projects</a>
 
