--- a/farm-lands.html
+++ b/farm-lands.html
@@ -65,7 +65,7 @@
 
 
                                 <a href="./open-plots.html" class="dropdown-item ">OPEN PLOTS</a>
-                                <a href="./farm-lands.html" class="dropdown-item active">Form-Lands</a>
+                                <a href="./farm-lands.html" class="dropdown-item active">Farm-Lands</a>
                                 <a href="./investments.html" class="dropdown-item">Investment</a>
                                 <a href="./projects.html" class="dropdown-item">Projects</a>
                             </div>
@@ -87,7 +87,7 @@
                                     class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Services</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Form-Lands</li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Farm-Lands</li>
                                 </ol>
                             </nav>
                         </div>
@@ -127,26 +127,26 @@
 
                     <div class="col-lg-6 section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                         data-wow-delay="0.1s" style="max-width: 600px;">
-                        <h1 class="mb-3">FORM - LANDS</h1>
+                        <h1 class="mb-3">FARM - LANDS</h1>
 
 
-                        <p class="mb-1">At MangoForms Real Estate, we specialize in the development and rejuvenation of
-                            form-lands, transforming them into thriving, sustainable agricultural spaces. Form-lands
+                        <p class="mb-1">At MangoFarms Real Estate, we specialize in the development and rejuvenation of
+                            farm-lands, transforming them into thriving, sustainable agricultural spaces. Farm-lands
                             represent a unique opportunity for sustainable land use, characterized by their fertile soil
                             and strategic location. With our expertise in land management and agricultural practices, we
-                            envision these form-lands as more than just plots of earth but as vibrant ecosystems capable
+                            envision these farm-lands as more than just plots of earth but as vibrant ecosystems capable
                             of supporting diverse crops and ecosystems. Through careful planning and sustainable
-                            development, we aim to unlock the full potential of form-lands while preserving their
+                            development, we aim to unlock the full potential of farm-lands while preserving their
                             natural beauty and ecological integrity.
 
-                            At MangoForms Real Estate, we believe in harnessing the inherent productivity of form-lands
+                            At MangoFarms Real Estate, we believe in harnessing the inherent productivity of farm-lands
                             to cultivate a sustainable future. By promoting eco-friendly farming practices such as
                             agroforestry, permaculture, and organic cultivation methods, we ensure that these lands not
                             only yield bountiful harvests but also contribute to environmental conservation and
                             community well-being. Through partnerships with local farmers and organizations, we seek to
-                            create a network of sustainable agricultural hubs where form-lands serve as the foundation
+                            create a network of sustainable agricultural hubs where farm-lands serve as the foundation
                             for resilient food systems and thriving rural economies. Join us in our mission to unlock
-                            the potential of form-lands and cultivate a future where agriculture and nature coexist
+                            the potential of farm-lands and cultivate a future where agriculture and nature coexist
                             harmoniously.
 
                     </div>
@@ -187,7 +187,7 @@
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
                                 <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
-                                <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
+                                <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
                                 <a class="btn btn-link" href="./investments.html">Investments</a>
                                 <a class="btn btn-link" href="">Projects</a>
 
