--- a/about.html
+++ b/about.html
@@ -201,16 +201,16 @@
             <h5>Our History</h5>
             <h3>Our Most Efficient Year</h3>
         </div>
-        <div class="col-lg-6 py-3  mb-1">
-            <h1>RAJA ROY PRAMOTORS,2021</h1>
-            <p>Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a desire to create a
+        <div class="col-lg-6 py-3  mb-2">
+            <h1 class="m-5">RAJA ROY PRAMOTORS,2021</h1>
+            <p class="m-5">Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a desire to create a
                 positive impact on people's lives. Our journey began with a small team of dedicated professionals
                 who shared a common goal: to provide exceptional real estate services that go above and beyond
                 expectations. Over the years, we have grown and expanded, gaining extensive experience and building
                 a vast network of satisfied clients. Throughout this journey, our core values of integrity,
                 professionalism, and personalized service have remained at the forefront of everything we do.</p>
         </div>
-        <div class="col-lg-6"><img src="./img/customer satisfaction.png"/></div>
+        <div class="col-lg-6"><img src="./img/coustomer review man.png" style="height:500px;" class="m-3"/></div>
         </div>
     </div>
     <!-- History end -->
