--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
             </a>
         </div>
         <div class="whatsapp">
-            <a href="tel:+918885667888">
-                <h4>Chat With Us!</h4>
+            <a href="https://wa.me/+918885667888" target="_blank">
+                <h4 class="vertical">Chat With Us!</h4>
             </a>
         </div>
         <style>
@@ -277,14 +277,27 @@
                 top: 20%;
                 background-color: #cb4154;
                 z-index: 999;
-                height: 100px;
-                width: 40px;
+                border-top-left-radius: 20px;
+                border-bottom-left-radius: 20px;
+
             }
 
-            .whatsapp h4 {
+            .whatsapp a .vertical {
+                transform: rotate(180deg);
+                writing-mode: vertical-lr;
                 font-size: 15px;
-                transform: rotate(270deg);
+                margin: 0;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-inline: 10px;
+                color: white;
+            }
+
+            .whatsapp a {
+
+                transform: rotate(360deg);
                 width: 100%;
+                height: 100%;
 
             }
 
@@ -392,11 +405,8 @@
 
                         <div class="row g-3 mt-3">
                             <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
-
                                 <button class="read-more"> <a href="./about.html">Know More</a></button>
                             </div>
-
-
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -680,14 +690,26 @@
         </div> -->
     <!-- Team End -->
 
+    <style>
+        .footer-logo {
+            width: 150px;
+        }
 
+        .footer-logo img {
+            width: 100%;
+        }
+    </style>
     <!-- Footer Start -->
     <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
 
         <div class="container pt-1 pb-4 px-lg-5">
             <div class="row gy-5 gx-4 pt-5">
-
-                <div class="col-lg-8 col-md-12">
+                <div class="col-lg-2 col-md-12">
+                    <div class="p-2 footer-logo">
+                        <img src="./img/logo1.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12">
                     <div class="row gy-5 g-4">
                         <div class="col-md-6">
                             <h5 class="fw-bold text-white mb-4">Our links</h5>
@@ -708,7 +730,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-4 col-lg-5">
                     <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
                         MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
