--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                         <div class="col-md-6">
                             <h5 class="fw-bold text-white mb-4">Our Services</h5>
                             <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
-                            <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
+                            <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
                             <a class="btn btn-link" href="./investments.html">Investment</a>
                             <a class="btn btn-link" href="">Projects</a>
 
