--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
-                        data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
+                    data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
             </div>
         </nav>
 
@@ -166,8 +166,12 @@
 
         <div class="container pt-1 pb-4 px-lg-5">
             <div class="row gy-5 gx-4 pt-5">
-
-                <div class="col-lg-8 col-md-12">
+                <div class="col-lg-2 col-md-12">
+                    <div class="p-2 footer-logo">
+                        <img src="./img/logo1.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12">
                     <div class="row gy-5 g-4">
                         <div class="col-md-6">
                             <h5 class="fw-bold text-white mb-4">Our links</h5>
@@ -188,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-4 col-lg-5">
                     <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
                         MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
@@ -232,9 +236,13 @@
 
         </div>
     </div>
-
     <!-- Footer End -->
 
+    <div class="whatsapp">
+        <a href="https://wa.me/+918885667888" target="_blank">
+            <h4 class="vertical">Chat With Us!</h4>
+        </a>
+    </div>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
