--- a/farm-lands.html
+++ b/farm-lands.html
@@ -125,12 +125,12 @@
                 <div class="row">
 
 
-                    <div class="col-lg-6 section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                    <div class="col-lg-6  position-relative text-center mx-auto  pb-4 wow fadeInUp"
                         data-wow-delay="0.1s" style="max-width: 600px;">
                         <h1 class="mb-3">FARM - LANDS</h1>
 
 
-                        <p class="mb-1">At MangoFarms Real Estate, we specialize in the development and rejuvenation of
+                        <p class="mb-1 text-lg-start">At MangoFarms Real Estate, we specialize in the development and rejuvenation of
                             farm-lands, transforming them into thriving, sustainable agricultural spaces. Farm-lands
                             represent a unique opportunity for sustainable land use, characterized by their fertile soil
                             and strategic location. With our expertise in land management and agricultural practices, we
