--- a/farm-lands.html
+++ b/farm-lands.html
@@ -123,11 +123,15 @@
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="row">
+<div class="col-lg-12 text-center mb-4">
+    <h1 class="mb-3">FARM - LANDS</h1>
+</div>
+                   
 
 
                     <div class="col-lg-6  position-relative text-center mx-auto  pb-4 wow fadeInUp"
                         data-wow-delay="0.1s" style="max-width: 600px;">
-                        <h1 class="mb-3">FARM - LANDS</h1>
+                       
 
 
                         <p class="mb-1 text-lg-start">At MangoFarms Real Estate, we specialize in the development and rejuvenation of
