--- a/investments.html
+++ b/investments.html
@@ -125,10 +125,10 @@
             <div class="container px-lg-5">
 
                 <div class="row">
-                    <div class=" col-lg-6 section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                    <div class="col-lg-12 text-center mb-4"> <h1 class="mb-3">INVESTMENT</h1></div>
+                    <div class=" col-lg-6   text-center mx-auto mb-5 pb-4 wow fadeInUp"
                         data-wow-delay="0.1s" style="max-width: 600px;">
-                        <h1 class="mb-3">INVESTMENT</h1>
-                        <p class="mb-1">Investing in Raja Roy Promotors' Real Estate Open Mango Plots presents a unique
+                        <p class="mb-1 text-lg-start">Investing in Raja Roy Promotors' Real Estate Open Mango Plots presents a unique
                             opportunity to partake in a venture that seamlessly merges profitability with the allure of
                             nature. These plots not only offer the potential for substantial returns on investment but
                             also promise a lifestyle infused with tranquility and natural beauty. With meticulous
