--- a/farm-lands.html
+++ b/farm-lands.html
@@ -168,6 +168,38 @@
             </div>
         </div>
         <!-- Testimonial End -->
+        <div class="container-xxl gallery">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-lg-12 text-center">
+                        <h4>Our Latest Photos</h4>
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/open-plots.webp" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/investment.jpg" alt="">
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                    <style>
+                        .gallery img {
+                            width: 100%;
+                        }
+                    </style>
 
 
         <!-- Footer Start -->
