--- a/investments.html
+++ b/investments.html
@@ -125,10 +125,10 @@
             <div class="container px-lg-5">
 
                 <div class="row">
-                    <div class="col-lg-12 text-center mb-4"> <h1 class="mb-3">INVESTMENT</h1></div>
-                    <div class=" col-lg-6   text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                    <div class="col-lg-12 text-center "> <h1 class="mb-3">INVESTMENT</h1></div>
+                    <div class=" col-lg-6   text-center mx-auto  pb-4 wow fadeInUp"
                         data-wow-delay="0.1s" style="max-width: 600px;">
-                        <p class="mb-1 text-lg-start">Investing in Raja Roy Promotors' Real Estate Open Mango Plots presents a unique
+                        <p class="text-lg-start">Investing in Raja Roy Promotors' Real Estate Open Mango Plots presents a unique
                             opportunity to partake in a venture that seamlessly merges profitability with the allure of
                             nature. These plots not only offer the potential for substantial returns on investment but
                             also promise a lifestyle infused with tranquility and natural beauty. With meticulous
@@ -138,12 +138,14 @@
                             for socially conscious investors. Whether one seeks to develop a dream home or capitalize on
                             the burgeoning real estate market, investing in Raja Roy Promotors' Open Mango Plots
                             represents a judicious decision that harmonizes financial growth with a connection to the
-                            environment.</p>
+                            environment.Investing in the future of your plots requires a strategic approach.</p>
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/investment.jpg">
                     </div>
-
+                    <div class="col-lg-12">
+                        <p> That considers long-term trends, potential risks, and opportunities for growth One promising avenue is sustainable land management practices, which not only enhance the environmental value of your plots but also contribute to their long-term productivity and profitability. Implementing practices such as regenerative agriculture, agroforestry, and carbon farming can improve soil health, sequester carbon, and enhance biodiversity, ultimately increasing the resilience of your plots to climate change and other environmental stressors. By prioritizing sustainable land management, you not only position your plots for long-term viability but also align your investments with the growing demand for ethically sourced and environmentally friendly products, thereby mitigating risks associated with changing consumer preferences and regulatory requirements.Furthermore, diversifying your investments across multiple sectors related to your plots can help spread risk and maximize returns. Consider allocating funds towards renewable energy projects such as solar or wind farms, which can complement your land use while providing additional sources of income. Investing in infrastructure development, such as irrigation systems or on-site processing facilities, can also enhance the value and productivity of your plots. </p>
+                    </div>
 
 
 
@@ -151,8 +153,39 @@
             </div>
         </div>
         <!-- Comparison Start -->
+        <div class="container-xxl gallery">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-lg-12 text-center">
+                        <h4>Our Latest Photos</h4>
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/open-plots.webp" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    </div>
+                    </div>
+                    </div>
 
-
+                    <style>
+                        .gallery img {
+                            width: 100%;
+                        }
+                    </style>
         <!-- Footer Start -->
         <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
 
