--- a/farm-lands.html
+++ b/farm-lands.html
@@ -144,13 +144,13 @@
                             natural beauty and ecological integrity.At MangoFarms Real Estate, we believe in harnessing the inherent productivity of farm-lands
                             to cultivate a sustainable future.By promoting eco-friendly farming practices such as
                             agroforestry, permaculture, and organic cultivation methods,we ensure that these lands not only yield bountiful harvests but also contribute to environmental conservation and
-                            community well-being. 
+                            community well-being.Through partnerships with local farmers and organizations.</p>
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/Form-Lands.jpg">
                     </div>
                     <div class="col-lg-12">
-                        <p> Through partnerships with local farmers and organizations, we seek to
+                        <p>we seek to
                             create a network of sustainable agricultural hubs where farm-lands serve as the foundation
                             for resilient food systems and thriving rural economies. Join us in our mission to unlock
                             the potential of farm-lands and cultivate a future where agriculture and nature coexist
