--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
                                     Us</a>
                             </div>
                             <div class="col-lg-6 text-center text-lg-start  hero-img">
-                                <img class="img-fluid animated zoomIn hero-image" src="./img/tree_house1.png" alt="">
+                                <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man1.png"
+                                    alt="">
                             </div>
                         </div>
                     </div>
