--- a/farm-lands.html
+++ b/farm-lands.html
@@ -172,7 +172,7 @@
             <div class="container ">
                 <div class="row ">
                     <div class="col-lg-12 text-center">
-                        <h4>Our Latest Photos</h4>
+                        <h4>Our Farm-Lands Photos</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/farmplotsimage2.jpg" alt="">
