--- a/projects.html
+++ b/projects.html
@@ -124,30 +124,47 @@
             <div class="container px-lg-5">
 
                 <div class="row">
-                    <div class="col-lg-6 section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
-                        data-wow-delay="0.1s" style="max-width: 600px;">
-
-                        <h1 class="mb-3">OPEN PLOTS</h1>
-                        <p class="mb-1"> Raja Roy Promotors have unveiled a tantalizing opportunity for real estate
-                            enthusiasts with their latest venture, Open Mango Plots. Nestled amidst serene landscapes,
-                            these plots offer not just a piece of land but a promise of tranquil living. With meticulous
-                            planning and attention to detail, Raja Roy Promotors have curated these plots to cater to
-                            the discerning tastes of modern homeowners. The allure of these plots lies not only in their
-                            strategic location but also in the promise of a sustainable lifestyle, surrounded by
-                            nature's bounty. Each plot is a canvas awaiting the dreams and aspirations of its owner,
-                            offering a blank slate for architectural marvels or serene retreats. Raja Roy Promotors have
-                            once again proven their commitment to excellence in the real estate realm with Open Mango
-                            Plots, inviting individuals to carve their own piece of paradise in the embrace of nature's
-                            beauty.</p>
-                    </div>
-                    <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/image_team.jpg">
+                    <div class=""col-lg-12><h1 class="mb-3 text-center">Our Projects</h1></div>
+                    <div class="col-lg-12 position-relative">
+                        <p class="text-lg-start"> As a leading real estate company, we pride ourselves on our track record of successfully completing diverse projects that meet and exceed the expectations of our clients. With a proven history of delivering exceptional results, we have established ourselves as trusted partners in the realm of property development. Our portfolio showcases a range of projects spanning residential, commercial, and mixed-use developments, each tailored to the unique needs and desires of our clientele.Our success lies in our unwavering commitment to excellence, innovation, and client satisfaction. From conceptualization to execution, we employ a meticulous approach that prioritizes quality craftsmanship, attention to detail, and adherence to timelines and budgets. Whether it's designing luxurious residences that epitomize elegance and sophistication, creating vibrant commercial spaces that foster growth and prosperity, or crafting dynamic mixed-use developments that enrich communities and enhance urban landscapes, we consistently strive to deliver unparalleled value and craftsmanship in every project we undertake. With our proven expertise and dedication to excellence, we stand ready to bring your vision to life and exceed your expectations in every aspect of real estate development.</p>
                     </div>
                 </div>
 
 
             </div>
         </div>
+        <div class="container-xxl gallery">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-lg-12 text-center">
+                        <h4>Our Projects</h4>
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/open-plots.webp" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/Form-Lands.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/investment.jpg" alt="">
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                    <style>
+                        .gallery img {
+                            width: 100%;
+                        }
+                    </style>
 
         <!-- </div>
                     </div>
