--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                     Us</a>
                             </div>
                             <div class="col-lg-6 text-center text-lg-start  hero-img">
-                                <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man1.png"
+                                <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man2.png"
                                     alt="">
                             </div>
                         </div>
@@ -369,6 +369,62 @@
             </div>
         </div>
         <!-- About End -->
+
+
+
+        <!--videos-->
+        <div class="container-fluid">
+            <div class="container py-md-5 py-4">
+                <h3 class="title-style text-center mb-5">Videos</h3>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="bg-clr-white hover-box">
+                            <div class="row align-items-center justify-content-center">
+                                <div class="col-sm-12 col-lg-6 v">
+                                    <video width="100%" controls>
+                                        <source src="./img/raja-roy-video.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+
+                                </div>
+
+                                <!-- <div class="col-sm-4 v">
+
+                                    <video width="300" height="300" controls>
+                                        <source src="./assets/images/video1.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+                                <div class="col-sm-4 v">
+
+                                    <video width="300" height="300" controls>
+                                        <source src="./assets/images/video2.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+
+                                </div>
+                                <div class="col-sm-4 v">
+                                    <video width="300" height="300" controls>
+                                        <source src="./assets/images/video3.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                                <div class="col-sm-4 v">
+                                    <video width="300" height="300" controls>
+                                        <source src="./assets/images/video6.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--videos-->
 
         <div class="container-xxl py-5 business">
             <div class="container px-lg-5">
@@ -726,8 +782,17 @@
     <div class="whatsapp">
         <a href="https://wa.me/+918885667888" target="_blank">
             <h4 class="vertical">Chat With Us!</h4>
+
+            <div class="notify">
+                <div class="notify-img">
+                    <img src="./img/168-br.svg" alt="raja roy Promoters">
+                </div>
+            </div>
         </a>
     </div>
+    <style>
+
+    </style>
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
